<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ModAssessment"
    tools:showIn="@layout/activity_mod_assessment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txtAssessName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp"
            android:inputType="textPersonName"
            android:hint="@string/name" />

        <TextView
            android:id="@+id/txtDue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/due"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtGoal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/defGoal"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/rgpType"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/radObj"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/objective" />

            <RadioButton
                android:id="@+id/radPer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/performance" />

        </RadioGroup>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>