<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btnTerms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_terms" />

            <Button
                android:id="@+id/btnCourses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_courses" />

            <Button
                android:id="@+id/btnMentors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_mentors" />

            <Button
                android:id="@+id/btnProgress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_progress" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>