<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".send_note"
    tools:showIn="@layout/activity_send_note">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txtSendRep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/recipient"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/txtSendSub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/subject"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/txtSendNotes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/notes"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/btnSendEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_sendemail" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>