<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".mod_term"
    tools:showIn="@layout/activity_mod_term">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/txtTermName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/txtTermStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/defStart"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtTermEnd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/defEnd"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spnCourses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btnTermAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_addcourses" />

            <com.wgustudent.SamuelCrumplerC196MobileApp.classes.NoScrollList
                android:id="@+id/lstTermCourses"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </com.wgustudent.SamuelCrumplerC196MobileApp.classes.NoScrollList>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>